# royal-reader

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  royal_road_client.py
.github/workflows/: ci.yaml
app/: constants.py  main.py  royal_road_client.py  soup_parsers.py
app/clients/: royal_road_client.py
tests/: test_royal_road_client.py
