[project]
name = "royal-reader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "fastapi>=0.115.12",
    "feedparser>=6.0.11",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "jupyter>=1.1.1",
    "jupyterlab-vim>=4.1.4",
    "pre-commit>=4.2.0",
    "ruff>=0.11.12",
]
