[project]
name = "royal-reader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "requests>=2.32.3",
    "textual>=3.3.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "jupyterlab-vim>=4.1.4",
    "pre-commit>=4.2.0",
    "ruff>=0.11.12",
    "textual-dev>=1.7.0",
]
